force-app/main/default/objects/Invoice_Line_Item__c/Invoice_Line_Item__c.object-meta.xml
<CustomObject>
    <description>Individual billable line on an invoice. Captures item, quantity, unit price, unit cost, and margin for each billable service or material.</description>
    <label>Invoice Line Item</label>
    <nameField>
        <displayFormat>LI-{0000000}</displayFormat>
        <label>Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>