force-app/main/default/objects/Invoice_Line_Item__c/fields/Billable__c.field-meta.xml
<CustomField>
    <fullName>Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Unchecked for warranty, no-charge, or internal cost lines. Only billable lines are included in invoice totals sent to the builder.</description>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>