force-app/main/default/objects/Invoice_Line_Item__c/fields/Community_Package__c.field-meta.xml
<CustomField>
    <fullName>Community_Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Package</label>
    <referenceTo>Community_Package__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Inv_Lines_Community_Package</relationshipName>
    <type>Lookup</type>
</CustomField>