force-app/main/default/objects/Invoice_Line_Item__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <description>Line Total - Line Cost. Set by Apex trigger.</description>
    <label>Gross Margin ($)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>