force-app/main/default/objects/Invoice_Line_Item__c/fields/Gross_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_Pct__c</fullName>
    <description>Gross Margin / Line Total. Set by Apex trigger.</description>
    <label>Gross Margin %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>