force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Cost__c.field-meta.xml
<CustomField>
    <fullName>Line_Cost__c</fullName>
    <description>Quantity × Unit Cost. Set by Apex trigger on insert/update.</description>
    <label>Line Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>