force-app/main/default/objects/Invoice_Line_Item__c/fields/Line_Total__c.field-meta.xml
<CustomField>
    <fullName>Line_Total__c</fullName>
    <description>Quantity × Unit Price. Set by Apex trigger on insert/update.</description>
    <label>Line Total</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>