force-app/main/default/objects/Invoice_Line_Item__c/fields/Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source quote line item this invoice line was generated from. Provides audit trail from approved quote to billed invoice.</description>
    <label>Quote Line Item</label>
    <referenceTo>Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Invoice Line Items</relationshipLabel>
    <relationshipName>Inv_Lines_Quote_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>