force-app/main/default/objects/Invoice_Line_Item__c/fields/Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost__c</fullName>
    <description>COGS per unit. Pulled from Item_Catalog__c.Standard_Cost__c when available.</description>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>