force-app/main/default/objects/Invoice_Line_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>Contracted or billed price per unit. Pulled from BMG Pricing Book when available.</description>
    <label>Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>